<resources>
    <string name="app_name">Pedometer</string>
    <string name="time">Time:</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="distance">Distance:</string>
    <string name="speed">Speed</string>
    <string name="distance_covered">Distance Covered:</string>
    <string name="location_permission_explanation">Allow location permission otherwise location tracking won\'t work.</string>
</resources>